# qnapctl

./: .gitignore  .travis.yml  CMakeLists.txt  Config.h.in  README.md  dbus_interface.xml.in
.github/workflows/: build.yml
qnapctl/: CMakeLists.txt  Controller.cpp  Controller.h  LedBlinker.cpp  LedBlinker.h  main.cpp
qnapd/: CMakeLists.txt  Daemon.cpp  Daemon.h  LCD.cpp  LCD.h  QNAPCtl.cpp  QNAPCtl.h  QNAPCtrl.cpp  QNAPCtrl.h  SIOPoller.cpp  SIOPoller.h  dbus_policy.conf.in  eu.zopi.QNAPCtl.conf  eu.zopi.QNAPCtrl.conf  eu.zopi.qnapctl.xml  eu.zopi.qnapctrl.xml  main.cpp
